--- a/style.css
+++ b/style.css
@@ -7,3 +7,12 @@
 .icon i{
     color: gold;
 }
+footer .icons i{
+    font-size: 40px;
+    margin: 15px;
+}
+@media screen and (max-width:992px) {
+    .companies{
+        display: none;
+    }
+}
